--- a/styles/main.css
+++ b/styles/main.css
@@ -1,24 +1,4 @@
 body {
 	font-family: 'Roboto', sans-serif;
+    color: blue;
 }
-.container {
-	display: flex;
-	flex-wrap: wrap;
-}
-.menu {
-	width: 15%;
-}
-.portfolio {
-	width: 85%;
-}
-.item {
-	width: 100%;
-	clear: both;
-}
-.item img {
-	float: left
-}
-.item span {
-	display: table-cell;
-	vertical-align: middle;
-	height: 240px;
